--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Glenna Clifton"
 title_separator          : "-"
 name                     : &name "Glenna Clifton"
 description              : &description "personal description"
-url                      : https://glennaclifton.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://glennaclifton.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  :  # the subpath of your site, e.g. "/blog"
 repository               : "gtclifton/glennaclifton.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
