changed description in sidebarin config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Glenna Clifton"
   avatar           : "headshot.jpg" #"profile.png"
-  bio              : "Assistant Professor of Biology at the University of Portland"
+  bio              : "biomechanist, evolutionary anatomist, coder, educator, dancer"
   location         : 
   employer         : 
   pubmed           : 
